fix: removed default styles from vite install

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <title>todo-list</title>
   </head>
   <body>
-    <div class="w-full h-dvh flex flex-col justify-center" id="root"></div>
+    <div
+      class="bg-neutral-900 text-white w-full h-dvh flex flex-col justify-center"
+      id="root"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
